--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
   padding: 0;
   background-color: var(--white); /* Consistent with index.html */
   color: var(--text);
+  background-color: var(--lavender);
 }
 
 h1, h2, h3 {
